copy mention positioner

--- a/mentions.html
+++ b/mentions.html
@@ -46,7 +46,8 @@
         <div class="text-contenaire">
             <div class="text-box1">
                 <h3 class="h3">Source :</h3>
-                <p class="p"><a id="a" target="_blank" href="https://genshinlab.com/genshin-impact-revenue-chart/">Genshin Lab</a></p>
+                <p class="p"><a id="a" target="_blank"
+                        href="https://genshinlab.com/genshin-impact-revenue-chart/">Genshin Lab</a></p>
 
                 <h3 class="h3">Tableau de données crées :</h3>
                 <p class="p"><a id="a" target="_blank"
@@ -60,27 +61,31 @@
 
                 <h3 class="h3">Vidéo :</h3>
                 <p class="p">Vidéo de la page d’accueil:</p>
-                <p class="p">Tiré du jeux <a id="a" target="_blank" href="https://genshin.hoyoverse.com/fr">Genshin Impact</a></p>
-                <p class="p"><a id="a" href="https://www.hoyolab.com/article/143107">© All rights reserved by miHoYo. Other properties belong to their respective owners</a></p>
+                <p class="p">Tiré du jeux <a id="a" target="_blank" href="https://genshin.hoyoverse.com/fr">Genshin
+                        Impact</a></p>
                 <h3 class="h3">Equipe :</h3>
                 <div class="link-name">
                     <p class="p">Elodie Laisne :</p>
-                    <p class="p"><a id="a" target="_blank" href="https://www.linkedin.com/in/elodie-laisne-a12987252/">Linkedin</a></p>
+                    <p class="p"><a id="a" target="_blank"
+                            href="https://www.linkedin.com/in/elodie-laisne-a12987252/">Linkedin</a></p>
                 </div>
                 <div class="link-name">
                     <p class="p">Mael Ledrin :</p>
                     <p class="p"><a id="a" target="_blank" href="https://thesloum-ml.netlify.app/">Site Web</a></p>
-                    <p class="p"><a id="a" target="_blank" href="https://www.linkedin.com/in/ma%C3%ABl-l-900945252/">Linkedin</a></p>
+                    <p class="p"><a id="a" target="_blank"
+                            href="https://www.linkedin.com/in/ma%C3%ABl-l-900945252/">Linkedin</a></p>
                 </div>
                 <div class="link-name">
                     <p class="p">Nino Lefort :</p>
                     <p class="p"><a id="a" target="_blank" href="https://nino-lefort-cv.netlify.app/">Site Web</a></p>
-                    <p class="p"><a id="a" target="_blank" href="https://www.linkedin.com/in/nino-lefort-6b0938251/">Linkedin</a></p>
+                    <p class="p"><a id="a" target="_blank"
+                            href="https://www.linkedin.com/in/nino-lefort-6b0938251/">Linkedin</a></p>
                 </div>
                 <div class="link-name">
                     <p class="p">Julie Rondof :</p>
                     <p class="p"><a id="a" target="_blank" href="https://portfoliorondof.netlify.app/">Site Web</a></p>
-                    <p class="p"><a id="a" target="_blank" href="https://www.linkedin.com/in/julie-rondof/">Linkedin</a></p>
+                    <p class="p"><a id="a" target="_blank" href="https://www.linkedin.com/in/julie-rondof/">Linkedin</a>
+                    </p>
                 </div>
             </div>
             <div class="espacement-contenaire"></div>
@@ -104,6 +109,10 @@
                 <p class="p">Frédéric Sallet</p>
             </div>
         </div>
+    </div>
+    <div class="copy">
+        <p class="p"><a id="a" href="https://www.hoyolab.com/article/143107">© All rights reserved by miHoYo. Other
+                properties belong to their respective owners</a></p>
     </div>
     <footer id="footer">
         <h2 style="color: white;">L’impact de Genshin</h2>
