poin ico sur toute les page

--- a/2charactere.html
+++ b/2charactere.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="font/font.css">
     <link rel="stylesheet" href="css/2charactere.css">
+    <link rel="icon" href="image/badge.ico" type="image/png">
     <title>Impact de Genshin - Nos personnages</title>
 </head>
 
