--- a/mentions.html
+++ b/mentions.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/mentions.css">
     <link rel="stylesheet" href="css/header_footer.css">
     <link rel="stylesheet" href="font/font.css">
+    <link rel="icon" href="image/badge.ico" type="image/png">
     <title>Impact de Genshin - Mentions légales</title>
 </head>
 
