--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="font/font.css">
     <link rel="stylesheet" href="css/header_footer.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="image/badge.ico" type="image/png">
     <title>Impact de Genshin - Accueil</title>
 </head>
 
