better sise ico

--- a/WheelMenu.html
+++ b/WheelMenu.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/header_footer.css">
   <link rel="stylesheet" href="font/font.css">
-  <link rel="icon" href="image/badge.ico" type="image/png">
+  <link rel="icon" href="image/badge-icone.ico" type="image/png">
   <title>Impact de Genshin - Nos données</title>
 </head>
 <body>
