--- a/1charactere.html
+++ b/1charactere.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="font/font.css">
     <link rel="stylesheet" href="css/1charactere.css">
-    <link rel="icon" href="image/badge.ico" type="image/png">
+    <link rel="icon" href="image/badge-icone.ico" type="image/png">
     <title>Impact de Genshin - Nos personnages</title>
 </head>
 
