Texte et box vide

--- a/WheelMenu.html
+++ b/WheelMenu.html
@@ -40,7 +40,14 @@
         <img id="sanditch-nav" src="image/sandwitch.svg" alt="">
         <img id="day-nav" src="image/white-night.svg" alt="">
     </div>
+    
 <div class="information-container">
+    <div class="information-box-contry information-box" id="informationBoxBack">
+        <div class="info-border">
+        <div class="information">
+            </div>
+        </div>
+    </div>
     <div class="information-box-elements information-box" id="informationBoxElements">
         <div class="info-border">
         <div class="information">
@@ -491,6 +498,7 @@
 </div>
 
 <div class="wheel-box">
+    <h1 style="position: absolute; top: 50px;"" class="mobi textL">Catégories</h1>
 <div class="wheel-container">
     <img src="images/Center.svg" alt="" class="center">
   <div class="wheel-item item-1">
