img page charactere

--- a/1charactere.html
+++ b/1charactere.html
@@ -48,6 +48,9 @@
             <h3>Lorem ipsum dolor sit amet consectetur. Massa lorem semper amet vulputate pulvinar augue bibendum fusce.
             </h3>
         </div>
+        <div class="contenaire-img">
+            <img src="image/Katorea.jpg" alt="">
+        </div>
         <div class="top-conteneur">
             <h1>Dendro / Katorea</h1>
             <a href="index.html">
