--- a/2charactere.html
+++ b/2charactere.html
@@ -47,6 +47,8 @@
             <div class="separation"></div>
             <h3>Lorem ipsum dolor sit amet consectetur. Massa lorem semper amet vulputate pulvinar augue bibendum fusce.
             </h3>
+        </div>        <div class="contenaire-img">
+            <img src="image/Rainer.jpg" alt="">
         </div>
         <div class="top-conteneur">
             <h1>Pyro / Rainer</h1>
