fix mode mobile boite vide

--- a/WheelMenu.html
+++ b/WheelMenu.html
@@ -43,7 +43,7 @@
     </div>
     
 <div class="information-container">
-    <div class="information-box-contry information-box" id="informationBoxBack">
+    <div class="information-box-back information-box " id="informationBoxBack">
         <div class="info-border">
         <div class="information">
             </div>
