alt done exepter page data

--- a/2charactere.html
+++ b/2charactere.html
@@ -48,7 +48,7 @@
             <h3>Lorem ipsum dolor sit amet consectetur. Massa lorem semper amet vulputate pulvinar augue bibendum fusce.
             </h3>
         </div>        <div class="contenaire-img">
-            <img src="image/Rainer.jpg" alt="">
+            <img src="image/Rainer.jpg" alt="Notre héro Rainer">
         </div>
         <div class="top-conteneur">
             <h1>Pyro / Rainer</h1>
@@ -58,11 +58,11 @@
         </div>
         <div class="nav-bas">
             <div class="white"></div>
-            <img class="responice-eyes" src="image/charactere/eyesRainer.png" alt="">
-            <a href="1charactere.html"><img class="responcive-head" src="image/charactere/tete1.png" alt=""></a>
-            <a href="2charactere.html"><img class="responcive-head" src="image/charactere/tete2.png" alt=""></a>
+            <img class="responice-eyes" src="image/charactere/eyesRainer.png" alt="oeuil divin de inazuma de Dendro">
+            <a href="1charactere.html"><img class="responcive-head" src="image/charactere/tete1.png" alt="tete de Katorea"></a>
+            <a href="2charactere.html"><img class="responcive-head" src="image/charactere/tete2.png" alt="tete de Rainer"></a>
             <div class="align-droit">
-                <a href="index.html"><img class="responcive-head" src="image/charactere/white-home.svg" alt=""></a>
+                <a href="index.html"><img class="responcive-head" src="image/charactere/white-home.svg" alt="Home"></a>
             </div>
         </div>
     </div>
