--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="home-page-title">
                 <h1 id="h1-titre" style="margin-top: -100px; color: rgb(0, 0, 0);"> L’impact de Genshin </h1>
                 <img id="separation-svg-header" class="separation-svg-header" src="image/header-limitation-black.svg"
-                    alt="">
+                    alt="separation">
                 <h2 id="h2-titre" style="color: rgb(0, 0, 0);"> Descendre pour découvrir </h2>
             </div>
         <video autoplay muted loop id="nightHomePage" class="annim_home_page_night">
@@ -35,7 +35,7 @@
     </header>
     <div id="conteneur-flou"></div>
     <div id="barre-menu">
-        <img id="close-nav" src="image/black-close.svg" alt="">
+        <img id="close-nav" src="image/black-close.svg" alt="fermer">
         <nav>
             <div>
                 <a href="index.html">
@@ -53,16 +53,16 @@
                     <h2>Mentions légales</h2>
                 </a>
                 <div id="menue-menue">
-                    <img id="day-menue" src="image/white-night.svg" alt="">
-                    <img id="sond-menue" src="image/white-on.svg" alt="">
+                    <img id="day-menue" src="image/white-night.svg" alt="mode jour/nuit">
+                    <img id="sond-menue" src="image/white-on.svg" alt="son actif/désactiver">
                 </div>
             </div>
         </nav>
     </div>
     <div id="scroll-menue">
-        <img id="sanditch-nav" src="image/sandwitch.svg" alt="">
-        <img id="day-nav" src="image/white-night.svg" alt="">
-        <img id="sond-nav" src="image/white-on.svg" alt="">
+        <img id="sanditch-nav" src="image/sandwitch.svg" alt="menue">
+        <img id="day-nav" src="image/white-night.svg" alt="mode jour/nuit">
+        <img id="sond-nav" src="image/white-on.svg" alt="son actif/désactiver">
     </div>
     <div class="espacement-hauteur"></div>
 
@@ -121,11 +121,6 @@
                 quel personnage un joueur dépense de l’argent, étant donné que deux personnages se partagent la même
                 période d’évènement.</p>
         </div>
-        <div class="scroll-appear">
-            <div class="contenaire-img">
-                <img src="image/accueil/graphique de GenshinLab.png"
-                    alt="Graphique des dépenses depuis la création du jeu en fonction des bannières, mis à jour le 09/01/2024 et extrait du site web Genshin Lab.">
-            </div>
             <div class="scroll-appear">
                 <p id="p" class="desGraph">Graphique des dépenses depuis la création du jeu en fonction des bannières,
                     mis à
@@ -133,7 +128,6 @@
                         href="https://genshinlab.com/genshin-impact-revenue-chart/">extrait
                         du site web Genshin Lab</a>.</p>
             </div>
-        </div>
         <div class="scroll-appear">
             <h3 id="h3">Comment déterminer quel personnage se vendrait le mieux ?</h3>
             <p id="p">Pour envisager le personnage qui se vendrait le mieux, nous avons d'abord calculé les moyennes de
