--- a/1charactere.html
+++ b/1charactere.html
@@ -49,7 +49,7 @@
             </h3>
         </div>
         <div class="contenaire-img">
-            <img src="image/Katorea.jpg" alt="">
+            <img src="image/Katorea.jpg" alt="Notre héroine Katorea">
         </div>
         <div class="top-conteneur">
             <h1>Dendro / Katorea</h1>
@@ -59,11 +59,11 @@
         </div>
         <div class="nav-bas">
             <div class="white"></div>
-            <img class="responice-eyes" src="image/charactere/eyesDendro.png" alt="">
-            <a href="1charactere.html"><img class="responcive-head" src="image/charactere/tete1.png" alt=""></a>
-            <a href="2charactere.html"><img class="responcive-head" src="image/charactere/tete2.png" alt=""></a>
+            <img class="responice-eyes" src="image/charactere/eyesDendro.png" alt="oeuil divin de inazuma de Dendro">
+            <a href="1charactere.html"><img class="responcive-head" src="image/charactere/tete1.png" alt="tete de Katorea"></a>
+            <a href="2charactere.html"><img class="responcive-head" src="image/charactere/tete2.png" alt="tete de Rainer"></a>
             <div class="align-droit">
-                <a href="index.html"><img class="responcive-head" src="image/charactere/white-home.svg" alt=""></a>
+                <a href="index.html"><img class="responcive-head" src="image/charactere/white-home.svg" alt="Home"></a>
             </div>
         </div>
 
