--- a/mentions.html
+++ b/mentions.html
@@ -15,7 +15,7 @@
 <body>
     <div id="conteneur-flou"></div>
     <div id="barre-menu">
-        <img id="close-nav" src="image/black-close.svg" alt="">
+        <img id="close-nav" src="image/black-close.svg" alt="fermer">
         <nav>
             <div>
                 <a href="index.html">
@@ -33,14 +33,14 @@
                     <h2>Mentions légales</h2>
                 </a>
                 <div id="menue-menue">
-                    <img id="day-menue" src="image/white-night.svg" alt="">
+                    <img id="day-menue" src="image/white-night.svg" alt="mode jour/nuit">
                 </div>
             </div>
         </nav>
     </div>
     <div id="scroll-menue">
-        <img id="sanditch-nav" src="image/sandwitch.svg" alt="">
-        <img id="day-nav" src="image/white-night.svg" alt="">
+        <img id="sanditch-nav" src="image/sandwitch.svg" alt="Menue">
+        <img id="day-nav" src="image/white-night.svg" alt="mode jour/nuit">
     </div>
     <div class="contenaire">
         <h2 class="h2">Mentions légales</h2>
