--- a/1charactere.html
+++ b/1charactere.html
@@ -49,7 +49,7 @@
             </h3>
         </div>
         <div class="contenaire-img">
-            <img src="image/Katorea.jpg" alt="Notre héroine Katorea">
+            <img src="image/Katorea.png" alt="Notre héroine Katorea">
         </div>
         <div class="top-conteneur">
             <h1>Dendro / Katorea</h1>
