--- a/2charactere.html
+++ b/2charactere.html
@@ -48,7 +48,7 @@
             <h3>Lorem ipsum dolor sit amet consectetur. Massa lorem semper amet vulputate pulvinar augue bibendum fusce.
             </h3>
         </div>        <div class="contenaire-img">
-            <img src="image/Rainer.jpg" alt="Notre héro Rainer">
+            <img src="image/Rainer.png" alt="Notre héro Rainer">
         </div>
         <div class="top-conteneur">
             <h1>Pyro / Rainer</h1>
