fix text descri, titre page

--- a/WheelMenu.html
+++ b/WheelMenu.html
@@ -11,6 +11,8 @@
   <title>Impact de Genshin - Nos données</title>
 </head>
 <body>
+    <h1 class="BIGTITLE textL" >Données de bénéfices</h1>
+    <p style="width: 80%; padding-left:10%;" class="textP">Bénéfices par personnage selon leur caractéristiques</p>
     <div class="bodyflex">
     <div id="conteneur-flou"></div>
     <div id="barre-menu">
@@ -49,11 +51,13 @@
             </div>
         </div>
     </div>
+    
     <div class="information-box-elements information-box" id="informationBoxElements">
         <div class="info-border">
         <div class="information">
             <div class="title">
                 <h1>Éléments</h1>
+                <p class="textTitle">Moyenne de bénéfice par personnage selon son élément.</p>
                 <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
             <div class="graph">
@@ -116,6 +120,7 @@
         <div class="information">
             <div class="title">
                 <h1>Pays</h1>
+                <p class="textTitle">Moyenne de bénéfice par personnage selon son pays.</p>
                 <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
             <div class="graph">
@@ -163,6 +168,7 @@
         <div class="information">
         <div class="title">
             <h1>Arme</h1>
+            <p class="textTitle">Moyenne de bénéfice par personnage selon son arme.</p>
             <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
         </div>
         <div class="graph">
@@ -211,6 +217,7 @@
         <div class="information">
             <div class="title">
                 <h1>Affiliations</h1>
+                <p class="textTitle">Moyenne de bénéfice par personnage selon son affiliation.</p>
                 <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
             <div class="graph">
@@ -273,6 +280,7 @@
         <div class="information">
             <div class="title">
                 <h1>Yeux</h1>
+                <p class="textTitle">Moyenne de bénéfice par personnage selon la couleur de ses yeux.</p>
                 <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
             <div class="graph">
@@ -349,6 +357,7 @@
         <div class="information">
             <div class="title">
                 <h1>Cheveux</h1>
+                <p class="textTitle">Moyenne de bénéfice par personnage selon la couleur de ses cheveux.</p>
                 <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
             <div class="graph">             
@@ -440,6 +449,7 @@
         <div class="information">
             <div class="title">
                 <h1>Genres</h1>
+                <p class="textTitle">Moyenne de bénéfice par personnage selon son genre.</p>
                 <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
                 <div class="graph">
@@ -467,6 +477,7 @@
         <div class="information">
             <div class="title">
                 <h1>Taille</h1>
+                <p class="textTitle">Moyenne de bénéfice par personnage selon sa taille.</p>
                 <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
             <div class="graph">
@@ -499,7 +510,7 @@
 </div>
 
 <div class="wheel-box">
-    <h1 style="position: absolute; top: 50px;"" class="mobi textL">Catégories</h1>
+    <h1 style="position: absolute; top: 300px;"" class="mobi textL">Catégories</h1>
 <div class="wheel-container">
     <img src="images/Center.svg" alt="" class="center">
   <div class="wheel-item item-1">
