ajout text katorea

--- a/1charactere.html
+++ b/1charactere.html
@@ -45,7 +45,7 @@
                 <h3>Inazuma</h3>
             </div>
             <div class="separation"></div>
-            <h3>Lorem ipsum dolor sit amet consectetur. Massa lorem semper amet vulputate pulvinar augue bibendum fusce.
+            <h3>Katorea est la plus jeune membre de la commission culturelle. À peine arrivée, elle a impressionné les hauts placés et les autres membres grâce à son ingéniosité et à ses idées innovantes.
             </h3>
         </div>
         <div class="contenaire-img">
