page charactere ajou tete

--- a/2charactere.html
+++ b/2charactere.html
@@ -19,8 +19,10 @@
                 <div class="equar"></div>
                 <div class="end"></div>
                 <img class="star" src="image/charactere/white-star.svg" alt="">
-                <a href="1charactere.html"><img src="image/charactere/tete1.png" alt="tete de Katorea"></a>
-                <a href="2charactere.html"><img src="image/charactere/tete2.png" alt="tete de Rainer"></a>
+                <a href="1charactere.html" class="head-contenaire1"><img src="image/charactere/Katorea_profile_2.png" alt="tete de Katorea"></a>
+                <a href="2charactere.html" class="head-contenaire2"><img src="image/charactere/Rainer_profile_2.png" alt="tete de Katorea"></a>
+                <a href="2charactere.html"><img src="image/charactere/tete2.png" alt="tete de Katorea"></a>
+                <a href="1charactere.html"><img src="image/charactere/tete1.png" alt="tete de Rainer"></a>
             </div>
         </div>
         <h1 class="responsive-h1">Pyro / Rainer</h1>
@@ -58,9 +60,11 @@
         </div>
         <div class="nav-bas">
             <div class="white"></div>
+            <a href="1charactere.html" class="head-contenaire1-responcive"><img src="image/charactere/Katorea_profile_2.png" alt="tete de Katorea"></a>
+            <a href="2charactere.html" class="head-contenaire2-responcive"><img src="image/charactere/Rainer_profile_2.png" alt="tete de Katorea"></a>
             <img class="responice-eyes" src="image/charactere/eyesRainer.png" alt="oeuil divin de inazuma de Dendro">
-            <a href="1charactere.html"><img class="responcive-head" src="image/charactere/tete1.png" alt="tete de Katorea"></a>
-            <a href="2charactere.html"><img class="responcive-head" src="image/charactere/tete2.png" alt="tete de Rainer"></a>
+            <a href="1charactere.html"><img class="responcive-head" src="image/charactere/tete2.png" alt="tete de Katorea"></a>
+            <a href="2charactere.html"><img class="responcive-head" src="image/charactere/tete1.png" alt="tete de Rainer"></a>
             <div class="align-droit">
                 <a href="index.html"><img class="responcive-head" src="image/charactere/white-home.svg" alt="Home"></a>
             </div>
