ajout de la navbar

--- a/2charactere.html
+++ b/2charactere.html
@@ -7,11 +7,41 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="font/font.css">
     <link rel="stylesheet" href="css/2charactere.css">
+    <link rel="stylesheet" href="css/headeronly.css">
     <link rel="icon" href="image/badge-icone.ico" type="image/png">
     <title>Impact de Genshin - Nos personnages</title>
 </head>
 
 <body>
+    
+<div id="conteneur-flou"></div>
+<div id="barre-menu">
+    <img id="close-nav" src="image/black-close.svg" alt="fermer">
+    <nav>
+        <div>
+            <a href="index.html">
+                <h2>Accueil</h2>
+            </a>
+            <a href="WheelMenu.html">
+                <h2>Nos données</h2>
+            </a>
+            <a href="1charactere.html">
+                <h2>Nos personnages</h2>
+            </a>
+        </div>
+        <div style="margin-top: 100px;">
+            <a href="mentions.html" style="margin-top: 100%;">
+                <h2>Mentions légales</h2>
+            </a>
+            <div id="menue-menue">
+            </div>
+        </div>
+    </nav>
+</div>
+<div id="scroll-menue">
+    <img id="sanditch-nav" src="image/sandwitch.svg" alt="Menue">
+</div>
+
     <div id="blocHaut">
         <div id="blocGaucheHaut">
             <div id="blocPerso">
@@ -47,7 +77,7 @@
                 <h3>Mondstaldt</h3>
             </div>
             <div class="separation"></div>
-            <h3>Lorem ipsum dolor sit amet consectetur. Massa lorem semper amet vulputate pulvinar augue bibendum fusce.
+            <h3>Rainer est un négociateur au service des Fatui. Il aime se penser puissant, mais bon nombre des habitants de Mondstadt le fuient pour éviter de l'entendre parler de lui-même pendant des heures.
             </h3>
         </div>        <div class="contenaire-img">
             <img src="image/Rainer.png" alt="Notre héro Rainer">
@@ -70,6 +100,7 @@
             </div>
         </div>
     </div>
+    <script src="js/header.js"></script>
 </body>
 
 </html>
