--- a/1charactere.html
+++ b/1charactere.html
@@ -7,9 +7,38 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="font/font.css">
     <link rel="stylesheet" href="css/1charactere.css">
+    <link rel="stylesheet" href="css/headeronly.css">
     <link rel="icon" href="image/badge-icone.ico" type="image/png">
     <title>Impact de Genshin - Nos personnages</title>
 </head>
+
+<div id="conteneur-flou"></div>
+<div id="barre-menu">
+    <img id="close-nav" src="image/black-close.svg" alt="fermer">
+    <nav>
+        <div>
+            <a href="index.html">
+                <h2>Accueil</h2>
+            </a>
+            <a href="WheelMenu.html">
+                <h2>Nos données</h2>
+            </a>
+            <a href="1charactere.html">
+                <h2>Nos personnages</h2>
+            </a>
+        </div>
+        <div style="margin-top: 100px;">
+            <a href="mentions.html" style="margin-top: 100%;">
+                <h2>Mentions légales</h2>
+            </a>
+            <div id="menue-menue">
+            </div>
+        </div>
+    </nav>
+</div>
+<div id="scroll-menue">
+    <img id="sanditch-nav" src="image/sandwitch.svg" alt="Menue">
+</div>
 
 <body>
     <div id="blocHaut">
@@ -55,9 +84,6 @@
         </div>
         <div class="top-conteneur">
             <h1>Dendro / Katorea</h1>
-            <a href="index.html">
-                <h3>Retour à l’accueil</h3>
-            </a>
         </div>
        
         <div class="nav-bas">
@@ -67,12 +93,10 @@
             <img class="responice-eyes" src="image/charactere/eyesDendro.png" alt="oeuil divin de inazuma de Dendro">
             <a href="1charactere.html"><img class="responcive-head" src="image/charactere/tete2.png" alt="tete de Katorea"></a>
             <a href="2charactere.html"><img class="responcive-head" src="image/charactere/tete1.png" alt="tete de Rainer"></a>
-            <div class="align-droit">
-                <a href="index.html"><img class="responcive-head" src="image/charactere/white-home.svg" alt="Home"></a>
-            </div>
         </div>
 
     </div>
+    <script src="js/header.js"></script>
 </body>
 
 </html>
