--- a/WheelMenu.html
+++ b/WheelMenu.html
@@ -435,7 +435,7 @@
                             <p>Rouge</p>
                             <div class="bar-label"></div>
                             <div class="bar" style="width: 0%; background-color: #212222;">
-                                <p>0</p>
+                                <p style="color: white;">0</p>
                             </div>
                         </div>
                   </div>
@@ -509,7 +509,7 @@
 </div>
 
 <div class="wheel-box">
-    <h2 style="position: absolute; top: 370px;"" class="mobi textL">Catégories</h2>
+    <h2 style="position: absolute; top: 40vh;"" class="mobi textL">Catégories</h2>
 <div class="wheel-container">
     <img src="images/Center.svg" alt="" class="center">
   <div class="wheel-item item-1">
