--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <img id="day-nav" src="image/white-night.svg" alt="mode jour/nuit">
         <img id="sond-nav" src="image/white-on.svg" alt="son actif/désactiver">
     </div>
+    <img id="scroll-down" src="image/scroll-white.svg" alt="">
     <div class="espacement-hauteur"></div>
 
     <div class="contenaire" id="contenaire">
@@ -79,9 +80,9 @@
 
             <div class="button">
                 <a href="WheelMenu.html"><img src="image/accueil/buttonData.png"
-                        alt="Bouton ramenenant vers la page donnée" ></a>
+                        alt="Bouton ramenenant vers la page donnée"></a>
                 <a href="1charactere.html"><img src="image/accueil/buttonPerso.png"
-                        alt="Bouton ramenant vers la page charactère" ></a>
+                        alt="Bouton ramenant vers la page charactère"></a>
             </div>
         </div>
         <div class="scroll-appear">
@@ -131,7 +132,7 @@
                 pour
                 quel personnage un joueur dépense de l’argent, étant donné que deux personnages se partagent la même
                 période d’évènement.</p>
-            
+
         </div>
         <div class="scroll-appear">
             <h3 id="h3">Comment déterminer quel personnage se vendrait le mieux ?</h3>
@@ -164,7 +165,7 @@
                 moyenne,
                 les joueurs ont déboursé le plus d’argent.</p>
             <p id="p" class="desGraph"> <a href="WheelMenu.html"><img src="image/accueil/buttonLinkData.png"
-                alt="Bouton ramenenant vers la page donnée" ></a></p>
+                        alt="Bouton ramenenant vers la page donnée"></a></p>
         </div>
         <div class="scroll-appear">
             <h3 id="h3">Et nos personnages ?</h3>
@@ -176,8 +177,8 @@
                 dépenser sans compter pour l’obtenir. En revanche, <a id="a" href="2charactere.html">Rainer</a> devrait
                 quant à lui
                 faire fuir tous les joueurs.</p>
-                <p id="p" class="desGraph"><a href="1charactere.html"><img src="image/accueil/buttonLinkPerso.png"
-                alt="Bouton ramenant vers la page charactère" ></a></p>
+            <p id="p" class="desGraph"><a href="1charactere.html"><img src="image/accueil/buttonLinkPerso.png"
+                        alt="Bouton ramenant vers la page charactère"></a></p>
 
             <p id="p">Site réalisé par Julie RONDOF, Elodie LAISNE, Maël LEDRIN, et Nino LEFORT.</p>
         </div>
