--- a/index.html
+++ b/index.html
@@ -143,10 +143,12 @@
         </div>
         <div class="scroll-appear">
             <div class="contenaire-img">
-                <img id="graph" src="image/accueil/graphiquePersonnage.png"
-                    alt="Infographie des moyennes dépensées en dollars américains pour 6 personnage, réalisé par l’équipe.">
-                <p class="desGraph" id="p">Infographie des 3 personnages les plus dépensés en moyenne et des 3 moins
-                    dépensés en moyenne en dollars américains
+                <img id="graph" src="image/accueil/graphiquePersonnage.png" alt="Infographie des 3 personnages provoquant le plus de dépenses en moyenne et
+                des 3 moins désirés
+                en moyenne en dollars américains">
+                <p class="desGraph" id="p">Infographie des 3 personnages provoquant le plus de dépenses en moyenne et
+                    des 3 moins désirés
+                    en moyenne en dollars américains
                     <a id="a" target="_blank"
                         href="https://docs.google.com/spreadsheets/d/1gyHDBqRzyk1E1J7hyVR2AcEhotUTDCheKO6kVbVHACk/edit?usp=sharing">réalisé
                         par l’équipe</a>.
