--- a/1charactere.html
+++ b/1charactere.html
@@ -69,7 +69,7 @@
             </div>
             <div class="text-reponce">
                 <h3>Affiliation</h3>
-                <h3>XX</h3>
+                <h3>Politique</h3>
             </div>
             <div class="text-reponce">
                 <h3>Pays</h3>
