--- a/WheelMenu.html
+++ b/WheelMenu.html
@@ -11,7 +11,7 @@
   <title>Impact de Genshin - Nos données</title>
 </head>
 <body>
-    <h1 class="BIGTITLE textL" >Données de bénéfices</h1>
+    <h1 class="BIGTITLE textL" >Nos données</h1>
     <p style="width: 80%; padding-left:10%;" class="textP">Bénéfices par personnage selon leur caractéristiques</p>
     <div class="bodyflex">
     <div id="conteneur-flou"></div>
