--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
         <img id="day-nav" src="image/white-night.svg" alt="mode jour/nuit">
         <img id="sond-nav" src="image/white-on.svg" alt="son actif/désactiver">
     </div>
-    <img id="scroll-down" src="image/scroll-white.svg" alt="">
+    <div class="conteur-scroll">
+        <img id="scroll-down" src="image/scroll-white.svg" alt="">
+    </div>
     <div class="espacement-hauteur"></div>
 
     <div class="contenaire" id="contenaire">
