bug son correction

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </a>
                 <div id="menue-menue">
                     <img id="day-menue" src="image/white-night.svg" alt="mode jour/nuit">
-                    <img id="sond-menue" src="image/white-on.svg" alt="son actif/désactiver">
+                    <img id="sond-menue" src="image/white-mute.svg" alt="son actif/désactiver">
                 </div>
             </div>
         </nav>
@@ -62,7 +62,7 @@
     <div id="scroll-menue">
         <img id="sanditch-nav" src="image/sandwitch.svg" alt="menue">
         <img id="day-nav" src="image/white-night.svg" alt="mode jour/nuit">
-        <img id="sond-nav" src="image/white-on.svg" alt="son actif/désactiver">
+        <img id="sond-nav" src="image/white-mute.svg" alt="son actif/désactiver">
     </div>
     <div class="conteur-scroll">
         <img id="scroll-down" src="image/scroll-white.svg" alt="">
