meta donner indexion site

--- a/WheelMenu.html
+++ b/WheelMenu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,15 @@
   <link rel="stylesheet" href="font/font.css">
   <link rel="icon" href="image/badge-icone.ico" type="image/png">
   <title>Impact de Genshin - Nos données</title>
+
+      <!-- Balises méta pour l'indexation -->
+      <meta name="robots" content="index, follow">
+      <meta name="googlebot" content="index, follow">
+      <meta name="bingbot" content="index, follow">
+      <meta name="yahoo-slurp" content="index, follow">
+  
+      <!-- Balise canonical pour éviter les problèmes de contenu dupliqué -->
+      <link rel="canonical" href="https://impact-genshin.netlify.app/wheelmenu">
 </head>
 <body>
     <h1 class="BIGTITLE textL" >Nos données</h1>
