--- a/mentions.html
+++ b/mentions.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="font/font.css">
     <link rel="icon" href="image/badge-icone.ico" type="image/png">
     <title>Impact de Genshin - Mentions légales</title>
+
+        <!-- Balises méta pour l'indexation -->
+        <meta name="robots" content="index, follow">
+        <meta name="googlebot" content="index, follow">
+        <meta name="bingbot" content="index, follow">
+        <meta name="yahoo-slurp" content="index, follow">
+    
+        <!-- Balise canonical pour éviter les problèmes de contenu dupliqué -->
+        <link rel="canonical" href="https://impact-genshin.netlify.app/mentions">
 </head>
 
 <body>
