meta de description

--- a/2charactere.html
+++ b/2charactere.html
@@ -16,7 +16,8 @@
         <meta name="googlebot" content="index, follow">
         <meta name="bingbot" content="index, follow">
         <meta name="yahoo-slurp" content="index, follow">
-    
+        <meta name="description" content="Découvrez l'impact de Genshin Impact. Explorez les personnages, les données et les analyses sur notre site sur les baniere de Genshin Impact!">
+
         <!-- Balise canonical pour éviter les problèmes de contenu dupliqué -->
         <link rel="canonical" href="https://impact-genshin.netlify.app/2charactere">
 </head>
