--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta name="googlebot" content="index, follow">
     <meta name="bingbot" content="index, follow">
     <meta name="yahoo-slurp" content="index, follow">
+    <meta name="description" content="Description de votre page ici.">
+    <meta name="description" content="Découvrez l'impact de Genshin Impact. Explorez les personnages, les données et les analyses sur notre site sur les baniere de Genshin Impact!">
+
 
     <!-- Balise canonical pour éviter les problèmes de contenu dupliqué -->
     <link rel="canonical" href="https://impact-genshin.netlify.app/index">
