--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
         <video autoplay muted loop id="dayHomePage" class="annim_home_page_day">
             <source src="animation/genshin-jour.mp4" type="video/mp4">
         </video>
-        <div id="gradient-overlay" class="gradient-overlay"></div>
+        <div id="gradient-overlay"></div>
 
     </header>
+    <img id="scroll-top" src="image/black-scroll.svg" alt="scroll en haut de la page">
     <div id="conteneur-flou"></div>
     <div id="barre-menu">
         <img id="close-nav" src="image/black-close.svg" alt="fermer">
