--- a/1charactere.html
+++ b/1charactere.html
@@ -67,7 +67,7 @@
         <h1 class="responsive-h1">Dendro / Katorea</h1>
         <div class="conteneur-text">
             <h2>Katorea</h2>
-            <h3>Voix : Nino Lefort</h3>
+            <h3>Le plus vendue</h3>
             <div class="separation"></div>
             <div class="text-reponce">
                 <h3>Arme utilisée</h3>
