--- a/2charactere.html
+++ b/2charactere.html
@@ -68,7 +68,7 @@
         <h1 class="responsive-h1">Pyro / Rainer</h1>
         <div class="conteneur-text">
             <h2>Rainer</h2>
-            <h3>Voix : Mael Ledrin</h3>
+            <h3>Le moins vendue</h3>
             <div class="separation"></div>
             <div class="text-reponce">
                 <h3>Arme utilisée</h3>
