index placer charactere

--- a/1charactere.html
+++ b/1charactere.html
@@ -54,7 +54,7 @@
     <div id="blocHaut">
         <div id="blocGaucheHaut">
             <div id="blocPerso">
-                <img class="eyes" src="image/charactere/eyesDendro.png" alt="oeuil divin de inazuma de Dendro">
+                <img class="eyes" src="image/charactere/eyesDendro.png" alt="oeuil divin de inazuma de Dendro" onclick="location.href='index.html';">
                 <div class="equar"></div>
                 <div class="end"></div>
                 <img class="star" src="image/charactere/white-star.svg" alt="">
