--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="font/font.css">
     <link rel="stylesheet" href="css/header_footer.css">
     <link rel="stylesheet" href="css/index.css">
+
     <link rel="icon" href="image/badge-icone.ico" type="image/png">
     <title>Impact de Genshin - Accueil</title>
 
@@ -16,7 +17,8 @@
     <meta name="googlebot" content="index, follow">
     <meta name="bingbot" content="index, follow">
     <meta name="yahoo-slurp" content="index, follow">
-    <meta name="description" content="Découvrez l'impact de Genshin Impact. Explorez les personnages, les données et les analyses sur notre site sur les baniere de Genshin Impact!">
+    <meta name="description"
+        content="Découvrez l'impact de Genshin Impact. Explorez les personnages, les données et les analyses sur notre site sur les baniere de Genshin Impact!">
 
 
     <!-- Balise canonical pour éviter les problèmes de contenu dupliqué -->
@@ -93,10 +95,12 @@
 
 
             <div class="button">
-                <a href="WheelMenu.html"><img src="image/accueil/buttonData.png"
-                        alt="Bouton ramenenant vers la page donnée"></a>
-                <a href="1charactere.html"><img src="image/accueil/buttonPerso.png"
-                        alt="Bouton ramenant vers la page charactère"></a>
+                <a href="WheelMenu.html">
+                    <div class="data-button" alt="Bouton ramenenant vers la page donnée"><h3>Nos données</h3></div>
+                </a>
+                <a href="1charactere.html">
+                    <div class="charactere-button" alt="Bouton ramenant vers la page charactère"><h3>Nos personnages</h3></div>
+                </a>
             </div>
         </div>
         <div class="scroll-appear">
