Edit tout bouton templacer 4/4 supr ex image

--- a/index.html
+++ b/index.html
@@ -96,10 +96,14 @@
 
             <div class="button">
                 <a href="WheelMenu.html">
-                    <div class="data-button" alt="Bouton ramenenant vers la page donnée"><h3>Nos données</h3></div>
+                    <div class="data-button" alt="Bouton ramenenant vers la page donnée">
+                        <h3>Nos données</h3>
+                    </div>
                 </a>
                 <a href="1charactere.html">
-                    <div class="charactere-button" alt="Bouton ramenant vers la page charactère"><h3>Nos personnages</h3></div>
+                    <div class="charactere-button" alt="Bouton ramenant vers la page charactère">
+                        <h3>Nos personnages</h3>
+                    </div>
                 </a>
             </div>
         </div>
@@ -161,7 +165,7 @@
         </div>
         <div class="scroll-appear">
             <div class="contenaire-img">
-                <img id="graph" src="image/accueil/graphiquePersonnage.png" alt="Infographie des 3 personnages provoquant le plus de dépenses en moyenne et
+                <img id="graph" src="image/graphiquePersonnage.png" alt="Infographie des 3 personnages provoquant le plus de dépenses en moyenne et
                     des 3 moins désirés
                     en moyenne en dollars américains">
                 <p class="desGraph" id="p">Infographie des 3 personnages provoquant le plus de dépenses en moyenne et
@@ -184,8 +188,11 @@
                 associées entre elles, nous avons pu déterminer pour chaque caractéristique celle pour laquelle, en
                 moyenne,
                 les joueurs ont déboursé le plus d’argent.</p>
-            <p id="p" class="desGraph"> <a href="WheelMenu.html"><img src="image/accueil/buttonLinkData.png"
-                        alt="Bouton ramenenant vers la page donnée"></a></p>
+            <p id="p" class="desGraph"> <a href="WheelMenu.html">
+                    <div class="data-button-v2" alt="Bouton ramenenant vers la page donnée">
+                        <h3>Découvrez nos données</h3>
+                    </div>
+                </a></p>
         </div>
         <div class="scroll-appear">
             <h3 id="h3">Et nos personnages ?</h3>
@@ -197,8 +204,11 @@
                 dépenser sans compter pour l’obtenir. En revanche, <a id="a" href="2charactere.html">Rainer</a> devrait
                 quant à lui
                 faire fuir tous les joueurs.</p>
-            <p id="p" class="desGraph"><a href="1charactere.html"><img src="image/accueil/buttonLinkPerso.png"
-                        alt="Bouton ramenant vers la page charactère"></a></p>
+            <p id="p" class="desGraph"><a href="1charactere.html">
+                    <div class="charactere-button-v2" alt="Bouton ramenant vers la page charactère">
+                        <h3>Découvrez nos personnages</h3>
+                    </div>
+                </a></p>
 
             <p id="p">Site réalisé par Julie RONDOF, Elodie LAISNE, Maël LEDRIN, et Nino LEFORT.</p>
         </div>
