--- a/WheelMenu.html
+++ b/WheelMenu.html
@@ -68,7 +68,7 @@
             <div class="title">
                 <h1>Éléments</h1>
                 <p class="textTitle">Moyenne de bénéfice par personnage selon son élément.</p>
-                <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
+                <img src="image/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
             <div class="graph">
                 <div class="bar-graph">
@@ -131,7 +131,7 @@
             <div class="title">
                 <h1>Pays</h1>
                 <p class="textTitle">Moyenne de bénéfice par personnage selon son pays.</p>
-                <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
+                <img src="image/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
             <div class="graph">
                 <div class="bar-graph">
@@ -179,7 +179,7 @@
         <div class="title">
             <h1>Arme</h1>
             <p class="textTitle">Moyenne de bénéfice par personnage selon son arme.</p>
-            <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
+            <img src="image/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
         </div>
         <div class="graph">
             <div class="bar-graph">
@@ -228,7 +228,7 @@
             <div class="title">
                 <h1>Affiliations</h1>
                 <p class="textTitle">Moyenne de bénéfice par personnage selon son affiliation.</p>
-                <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
+                <img src="image/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
             <div class="graph">
                 <div class="bar-graph">
@@ -291,7 +291,7 @@
             <div class="title">
                 <h1>Yeux</h1>
                 <p class="textTitle">Moyenne de bénéfice par personnage selon la couleur de ses yeux.</p>
-                <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
+                <img src="image/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
             <div class="graph">
                 <div class="bar-graph">
@@ -368,7 +368,7 @@
             <div class="title">
                 <h1>Cheveux</h1>
                 <p class="textTitle">Moyenne de bénéfice par personnage selon la couleur de ses cheveux.</p>
-                <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
+                <img src="image/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
             <div class="graph">             
                         <div class="bar-graph">
@@ -459,7 +459,7 @@
             <div class="title">
                 <h1>Genres</h1>
                 <p class="textTitle">Moyenne de bénéfice par personnage selon son genre.</p>
-                <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
+                <img src="image/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
                 <div class="graph">
                     <div class="bar-graph">
@@ -487,7 +487,7 @@
             <div class="title">
                 <h1>Taille</h1>
                 <p class="textTitle">Moyenne de bénéfice par personnage selon sa taille.</p>
-                <img src="images/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
+                <img src="image/Union.svg" alt="" class="exit" onclick="toggleInformationBoxes()">
             </div>
             <div class="graph">
                 <div class="bar-graph">
@@ -521,51 +521,50 @@
 <div class="wheel-box">
     <h2 style="position: absolute; top: 40vh;"" class="mobi textL">Catégories</h2>
 <div class="wheel-container">
-    <img src="images/Center.svg" alt="" class="center">
+    <img src="image/Center.svg" alt="" class="center">
   <div class="wheel-item item-1">
     <div class="text-container">
-        <div class="icon"><img src="images/Effects.png" class="ico"  onclick="showInformationBox('informationBoxElements')" alt=""> </div>
+        <div class="icon"><img src="image/Effects.png" class="ico"  onclick="showInformationBox('informationBoxElements')" alt=""> </div>
     </div>
   </div>
   <div class="wheel-item item-2">
     <div class="text-container">
-        <div class="icon"><img src="images/Contry.png" class="ico" onclick="showInformationBox('informationBoxContry')" alt=""></div>
+        <div class="icon"><img src="image/Contry.png" class="ico" onclick="showInformationBox('informationBoxContry')" alt=""></div>
     </div>
   </div>
   <div class="wheel-item item-3">
     <div class="text-container">
-        <div class="icon"><img src="images/Weapon.png" class="ico" onclick="showInformationBox('informationBoxWeapon')" alt=""></div>
+        <div class="icon"><img src="image/Weapon.png" class="ico" onclick="showInformationBox('informationBoxWeapon')" alt=""></div>
     </div>
   </div>
   <div class="wheel-item item-4">
     <div class="text-container">
-        <div class="icon"><img src="images/Affiliations.png" class="ico" onclick="showInformationBox('informationBoxAffiliations')" alt=""></div>
+        <div class="icon"><img src="image/Affiliations.png" class="ico" onclick="showInformationBox('informationBoxAffiliations')" alt=""></div>
     </div>
   </div>
   <div class="wheel-item item-5">
     <div class="text-container">
-        <div class="icon"><img src="images/Eyes.png" class="ico" onclick="showInformationBox('informationBoxEye')" alt=""></div>
+        <div class="icon"><img src="image/Eyes.png" class="ico" onclick="showInformationBox('informationBoxEye')" alt=""></div>
     </div>
   </div>
   <div class="wheel-item item-6">
     <div class="text-container">
-        <div class="icon"><img src="images/Hair.png" class="ico" onclick="showInformationBox('informationBoxHair')" alt=""></div>
+        <div class="icon"><img src="image/Hair.png" class="ico" onclick="showInformationBox('informationBoxHair')" alt=""></div>
     </div>
   </div>
   <div class="wheel-item item-7">
     <div class="text-container">
-        <div class="icon"><img src="images/Gender.png" class="ico" onclick="showInformationBox('informationBoxGender')" alt=""></div>
+        <div class="icon"><img src="image/Gender.png" class="ico" onclick="showInformationBox('informationBoxGender')" alt=""></div>
     </div>
   </div>
   <div class="wheel-item item-8">
     <div class="text-container">
-        <div class="icon"><img src="images/Height.png" class="ico" onclick="showInformationBox('informationBoxHeight')" alt=""></div>
+        <div class="icon"><img src="image/Height.png" class="ico" onclick="showInformationBox('informationBoxHeight')" alt=""></div>
     </div>
   </div>
 </div>
 </div>
 </div>
-<script src="js/info.js"></script>
 
 <footer id="footer">
     <h2 style="color: white;">L’impact de Genshin</h2>
@@ -590,6 +589,8 @@
     <a href="https://www.youtube.com/watch?v=4xnsmyI5KMQ&t=28s&pp=ygUNZHJhZ29uIGRhbmNlIA%3D%3D"><img src="image/star-footer.svg" alt="">
 </footer>
 <script src="js/footer_header.js"></script>
+<script src="js/info.js"></script>
+
 
 </body>
 </html>
