edit header menue remplacement du svg

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </nav>
     </div>
     <div id="scroll-menue">
-        <img id="sanditch-nav" src="image/sandwitch.svg" alt="menue">
+        <div id="sanditch-nav" alt="menue"> <div class="trait1"></div><div class="trait2"></div><div class="trait3"></div></div>
         <img id="day-nav" src="image/white-night.svg" alt="mode jour/nuit">
         <img id="sond-nav" src="image/white-mute.svg" alt="son actif/désactiver">
     </div>
