--- a/1charactere.html
+++ b/1charactere.html
@@ -47,7 +47,7 @@
     </nav>
 </div>
 <div id="scroll-menue">
-    <img id="sanditch-nav" src="image/sandwitch.svg" alt="Menue">
+    <div id="sanditch-nav" alt="menue"> <div class="trait1"></div><div class="trait2"></div><div class="trait3"></div></div>
 </div>
 
 <body>
