--- a/mentions.html
+++ b/mentions.html
@@ -49,7 +49,7 @@
         </nav>
     </div>
     <div id="scroll-menue">
-        <img id="sanditch-nav" src="image/sandwitch.svg" alt="Menue">
+        <div id="sanditch-nav" alt="menue"> <div class="trait1"></div><div class="trait2"></div><div class="trait3"></div></div>
         <img id="day-nav" src="image/white-night.svg" alt="mode jour/nuit">
     </div>
     <div class="contenaire">
