--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/index.css">
 
     <link rel="icon" href="image/badge-icone.ico" type="image/png">
-    <title>Impact de Genshin - Accueil</title>
+    <title>Impact de Genshin</title>
 
     <!-- Balises méta pour l'indexation -->
     <meta name="robots" content="index, follow">
