--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <title>Impact de Genshin</title>
 
     <!-- Balises méta pour l'indexation -->
+    <meta name="robots" content="all">
+    <meta name="author" content="Nino Lefort">
+    <meta name="owner" content="Nino Lefort">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
     <meta name="bingbot" content="index, follow">
